test/files/neg/t12851/T_1.scala

trait T1 {
  def f: Int
}
trait T2 extends T1 {
  def f() = 42
}
